<resources>
    <string name="app_name">Smart Chat</string>
    <string name="tab_chats_text">CHATS</string>
    <string name="tab_status_text">STATUS</string>
    <string name="tab_calls_text">CALLS</string>
    <string name="opens_system_camera">Opens System Camera</string>
    <string name="last_message">last message</string>
    <string name="user_name">\tUser Name</string>
    <string name="sample_time">12:20 AM</string>
    <string name="new_group_menu_item_text">New Group</string>
    <string name="new_broadcast_menu_item_text">New Broadcast</string>
    <string name="smart_chat_web_menu_item_text">Smart Chat Web</string>
    <string name="starred_messages_menu_item_text">Starred Messages</string>
    <string name="settings_menu_item_text">Settings</string>
    <string name="status_privacy_menu_item_text">Status Privacy</string>
    <string name="clear_call_logs_menu_item_text">Clear Call Logs</string>
    <string name="tab_groups_text">GROUPS</string>
    <string name="create_new_user_account"><u>Create New User Account</u></string>
    <string name="forgot_password_click_to_recover"><u>Forgot Password? Click to Recover</u></string>
    <string name="new_to_smartchat_create_new_account_here"><u>New To SmartChat? Create New Account Here</u></string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_btn_text">SIGN IN</string>
    <string name="email_id">\tEmail ID</string>
    <string name="phone_number">\tPhone Number</string>
    <string name="password">\tPassword</string>
    <string name="create_user_btn_text">CREATE USER</string>

    <string name="pref_file_name">user_preferences</string>

    <string name="passwordCriteria">
        Password should contain
        \n1. At least 6 Characters Long
        \n2. Lowercase &amp; Uppercase Letters
        \n3. Numbers &amp; Special Characters
    </string>
    <string name="last_active_status">Last Seen at 12:00 PM</string>
    <string name="type_a_message">Type a message</string>
    <string name="sample_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

</resources>