<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:gravity="center_vertical"
    android:background="@color/colorPrimary"
    android:orientation="horizontal"
    android:id="@+id/layoutTabBarHolder">

    <ImageView
        android:id="@+id/imgOpenSystemCamera"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/opens_system_camera"
        android:src="@drawable/ic_camera" />

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:minHeight="?attr/actionBarSize"
        app:tabGravity="fill"
        app:tabIndicatorAnimationDuration="@android:integer/config_mediumAnimTime"
        app:tabIndicatorColor="@color/colorWhite"
        app:tabIndicatorHeight="4dp"
        app:tabMaxWidth="0dp"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/colorWhite">


        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:text="@string/tab_chats_text"
            android:textAlignment="center"
            android:id="@+id/tabItemChats"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:text="@string/tab_status_text"
            android:textAlignment="center"
            android:id="@+id/tabItemStatus"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:text="@string/tab_calls_text"
            android:textAlignment="center"
            android:id="@+id/tabItemCalls"/>
    </com.google.android.material.tabs.TabLayout>
</LinearLayout>